--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Promisified TingoDB",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "BABEL_ENV=test ./node_modules/.bin/jest",
+    "testWatch": "BABEL_ENV=test ./node_modules/.bin/jest --watch"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,11 @@
   "dependencies": {
     "thenify": "^3.3.0",
     "tingodb": "^0.5.1"
+  },
+  "devDependencies": {
+    "babel-jest": "^22.4.3",
+    "babel-preset-env": "^1.6.1",
+    "jest": "^22.4.3",
+    "regenerator-runtime": "^0.11.1"
   }
 }
