--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "tingodb-promise",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Promisified TingoDB",
   "main": "index.js",
   "scripts": {
-    "test": "BABEL_ENV=test ./node_modules/.bin/jest",
+    "test": "jest",
     "testWatch": "npm test -- --watch"
   },
   "repository": {
@@ -22,9 +22,6 @@
     "tingodb": "^0.5.1"
   },
   "devDependencies": {
-    "babel-jest": "^22.4.3",
-    "babel-preset-env": "^1.6.1",
-    "jest": "^22.4.3",
-    "regenerator-runtime": "^0.11.1"
+    "jest": "^22.4.3"
   }
 }
